# auth-manager-backend

./: .gitignore  Dockerfile  README.md  Readme.md  config.yaml  mongod.py  pyproject.toml  requirements.txt
.github/workflows/: publish_docker.yml
user_manager/: app.py  config.yaml  country_names.json  default_schema.py  from_owncloud.py  install.py
user_manager/common/: auth.py  config.py  models.py  mongo.py  password_helper.py  throttle.py
user_manager/common/models/: __init__.py  base.py  client.py  group_mail.py  manager_schema.py  oauth.py  session.py  throttle.py  user.py  user_group.py  user_history.py  user_view.py
user_manager/mail/: api.py  app.py  dovecot.py  nginx_auth.py
user_manager/manager/: api.py  app.py  auth.py  helper.py  mailer.py
user_manager/manager/api/: client.py  group.py  group_mail.py  schema.py  user.py  user_helpers.py  user_history.py  user_view.py
user_manager/manager/mail_templates/en_us/: password_reset.html  register.txt  (+4 more)
user_manager/manager/models/: __init__.py  client.py  group.py  group_mail.py  schema.py  user.py  user_history.py  user_view.py
user_manager/oauth/: api.py  app.py  cors.py  oauth2.py  oauth2_key.py  session.py  throttle.py  user_helper.py
user_manager/oauth/api/: __init__.py  authorize.py  cors_helper.py  end_session.py  error.py  ext_auth_base.py  ext_card_auth.py  ext_edge_sync.py  ext_mail.py  ext_mailing_list.py  ext_profiles.py  login_status.py  oauth2_helper.py  picture.py  session_helper.py  token.py  userinfo.py  well_known.py
user_manager/oauth/static/: authorize.html  status-iframe.html
