[tool.poetry]
name = "oauth-server"
version = "1.0.0"
description = "OAuth server backend"
authors = ["Lukas Voegtle <lukas@infornautik.de>"]

[tool.poetry.dependencies]
python = "^3.8"
authlib = "^0.14.1"
pydantic = "^1.4"
oyaml = "^0.9"
passlib = "^1.7.2"
fastapi = "^0.54.0"
pymongo = "^3.10.1"
aiofiles = "^0.4.0"
httpx = "0.12.0"
itsdangerous = "^1.1.0"
argon2_cffi = "^19.2.0"
python-multipart = "^0.0.5"
cryptography = "^2.9"
dateutils = "^0.6.8"
pwnedpasswords = "^2.0.0"
regex = "^2020.4.4"
pyIsEmail = "^1.3.2"
mako = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
uvicorn = "^0.11.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
