[tool.poetry]
name = "oauth-server"
version = "1.0.0"
description = "OAuth server backend"
authors = ["Lukas Voegtle <lukas@infornautik.de>"]

[tool.poetry.dependencies]
python = "^3.8"
authlib = ">=0"
pydantic = ">=1"
oyaml = ">=0"
passlib = ">=1"
fastapi = ">=0"
pymongo = ">=3"
aiofiles = ">=0"
httpx = ">=0"
itsdangerous = ">=1"
argon2_cffi = ">=19"
python-multipart = ">=0"
cryptography = ">=3"
dateutils = ">=0"
pwnedpasswords = ">=2"
regex = ">=2020"
pyIsEmail = ">=1"
mako = ">=1"
motor = ">=2"
aiosmtplib = ">=1"
unidecode = ">=1"
bcrypt = ">=3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
uvicorn = ">=0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
